tests/trybuild/get-url-entrypoint.stderr
error[E0599]: no method named `get_url` found for struct `Client` in the current scope
 --> tests/trybuild/get-url-entrypoint.rs:5:77
  |
5 |     let _response: Result<RestResponse, shared_restapi::RestError> = client.get_url(
  |                                                                      -------^^^^^^^ method not found in `Client`
